--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,8 +28,24 @@
         "style/scss/_header.scss",
         "style/scss/_body.scss",
         "style/scss/_navigacija.scss",
-        "style/scss/_info.scss",
-        "style/scss/_hero.scss"
+        "style/scss/_about.scss",
+        "style/scss/_hero.scss",
+        "style/scss/_about_apacia.scss",
+        "style/scss/_footer.scss",
+        "style/scss/_antras.scss"
+      ]
+    },
+    {
+      "path": "assets/scss/style.scss",
+      "imports": [
+        "assets/scss/_reset.scss",
+        "assets/scss/_header.scss",
+        "assets/scss/_body.scss",
+        "assets/scss/_about.scss",
+        "assets/scss/_hero.scss",
+        "assets/scss/_about_apacia.scss",
+        "assets/scss/_footer.scss",
+        "assets/scss/_antras.scss"
       ]
     }
   ],
