--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,7 +45,8 @@
         "assets/scss/_hero.scss",
         "assets/scss/_about_apacia.scss",
         "assets/scss/_footer.scss",
-        "assets/scss/_antras.scss"
+        "assets/scss/_antras.scss",
+        "assets/scss/_kontaktas.scss"
       ]
     }
   ],
