--- a/prepros-6.config
+++ b/prepros-6.config
@@ -46,7 +46,7 @@
         "assets/scss/_about_apacia.scss",
         "assets/scss/_footer.scss",
         "assets/scss/_antras.scss",
-        "assets/scss/_kontaktas.scss"
+        "assets/scss/_responsive.scss"
       ]
     }
   ],
